<?xml version="1.0"?> //  <?xml>문서 문법을 정의하는 문구로 다음 내용은 xml 버전 1.0을 따르고 있다는 뜻
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
// <?xml>문서 문법을 정의하는 문구로 다음 내용은 xml 모델 정의 내용
<package format="3"> // 이 구문부터 맨 끝의 </package>까지가 ROS 패키지 설정 부분, ormat=”3”이라고 패키지 설정 파일의 버전 기재, ROS 2는 3을 사용
  <name>camera_ros2</name> // 패키지의 이름, 패키지를 생성할 때 입력한 패키지 이름이 사용
  <version>0.0.0</version> //  패키지의 버전
  <description>TODO: Package description</description> // 패키지의 간단한 설명
  <maintainer email="ncslab@todo.todo">ncslab</maintainer> // 패키지 관리자의 이름과 이메일 주소
  <license>TODO: License declaration</license> // 라이선스 기재

  <buildtool_depend>ament_cmake</buildtool_depend> 빌드 툴의 의존성을 기술
  <build_depend>libopencv-dev</build_depend> // 패키지를 빌드할 때 필요한 의존 패키지 이름
  <build_depend>rclcpp</build_depend> // 패키지를 빌드할 때 필요한 의존 패키지 이름
  <build_depend>sensor_msgs</build_depend> // 패키지를 빌드할 때 필요한 의존 패키지 이름
  <build_depend>std_msgs</build_depend> // 패키지를 빌드할 때 필요한 의존 패키지 이름

  <exec_depend>libopencv-dev</exec_depend> //  패키지를 실행할 때 필요한 의존 패키지 이름
  <exec_depend>rclcpp</exec_depend> //  패키지를 실행할 때 필요한 의존 패키지 이름
  <exec_depend>sensor_msgs</exec_depend> //  패키지를 실행할 때 필요한 의존 패키지 이름
  <exec_depend>std_msgs</exec_depend> //  패키지를 실행할 때 필요한 의존 패키지 이름

  <test_depend>ament_lint_auto</test_depend> // 패키지를 테스트할 때 필요한 의존 패키지 이름
  <test_depend>ament_lint_common</test_depend> // 패키지를 테스트할 때 필요한 의존 패키지 이름

  <export>  위에서 명시하지 않은 확장 태그명을 사용할 때
    <build_type>ament_cmake</build_type> // 확장 태그명
  </export>
</package> // ROS 패키지 설정 마지막 부분
